--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
+    overflow-x: hidden;
 }
 
 /* aqui começa as estilizações do header*/
@@ -67,7 +68,7 @@ header {
     border-radius: 40px;
 }
 
-/* aqui começa as estilizações do main*/
+/* aqui começa as estilizações do main -> banner*/
 
 .banner{
     height: calc(100vh - 100px);
@@ -151,4 +152,127 @@ header {
 
 .banner .pointer.active {
     background-color: #b28756;
+}
+
+/* aqui começa as estilizações do main sections sobre efeito de light e dark*/
+
+.default{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.default .section-title, .default .section-desc{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.default .section-title {
+    font-size: 20px;
+}
+
+.default .section-desc{
+    font-size: 12px;
+    color: #CCC;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.default .section-body{
+    max-width: 1140px;
+    margin: auto;
+}
+
+.default.light{
+    background-color: #f7f7f7;
+}
+
+.default.light .section-title, .default.light .section-body{
+    color: #000;
+}
+
+.default.dark .section-title, .default.dark .section-body{
+    color: #fff;
+}
+
+.default.light .section-title{
+    color: #000;
+}
+
+.default.dark {
+    background-color: #000;
+}
+
+.default.dark .section-title{
+    color: #fff;
+}
+
+.button{
+    display: inline-block;
+    background-color: #b28756;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+
+/* aqui começa as estilizações de areas especificas -> about us*/
+
+.section-about-us {
+    display: flex;
+    flex-direction: row;
+}
+
+.section-about-us--left{
+    flex: 1;
+
+    > p {
+        font-size: 14px;
+        line-height: 25px;
+    }
+}
+
+.section-about-us--right{
+    width: 520px;
+    text-align: center;
+
+    > img {
+        width: 480px;
+        box-shadow: 0 5px 10px #333;
+    }
+}
+
+/* aqui começa as estilizações de areas especificas -> services*/
+
+.section-services{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.section-service{
+    flex: 1;
+    text-align: center;
+    border-right: 1px solid #333;
+    padding: 15px;
+
+    > h4 {
+        margin-top: 40px;
+        text-transform: uppercase;
+        font-size: 18px;
+    }
+
+    > p {
+        margin-top: 10px;
+        font-size: 12px;
+        color: #999;
+    }
+}
+
+.section-service:first-child{
+    border-left: 1px solid #333;
 }
