--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -560,3 +560,68 @@ header {
 .section-body .pointer.active {
     background-color: #b28756;
 }
+
+/* aqui começa as estilizações de areas especificas -> company*/
+
+.section-company{
+    height: auto;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+}
+
+.section-company-logos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-awards--frame {
+    padding: 40px;
+}
+
+/* aqui começa as estilizações de areas especificas -> price*/
+
+.section-price {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.section-price-card{
+    background-color: #FFF;
+    text-align: center;
+    padding: 30px;
+    margin-left: 20px;
+
+    > h1, h2, h3{
+        text-transform: uppercase;
+    }
+
+    > h1 {
+        font-size: 36px;
+        font-weight: bold;
+    }
+
+    > h2 {
+        font-size: 14px;
+        margin-bottom: 10px;
+        font-weight: 400;
+    }
+
+    > h3 {
+        font-size: 10px;
+        color: #999;
+    }
+}
+
+.section-price-card-advantage{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+
+    > span {
+        color: #555;
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+}
